fixed navbar z-index position and ajusted link styles

--- a/css/main.css
+++ b/css/main.css
@@ -314,10 +314,11 @@ nav {
     display: none;
   }
   nav {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
     max-width: 1920px;
     margin: auto;
     padding: 1.2rem 2.2rem 0;
